# Salary_Tracker

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: main.py
src/: database.py  exceptions.py  main.py
src/models/: user_model.py
src/repositories/: user_repository.py
src/routes/: admin_route.py  auth.py  employee_info.py
src/schemas/: user_schemas.py
src/service/: token.py  user.py  user_service.py
